[gd_scene load_steps=6 format=3 uid="uid://5x6a0s1sa2cg"]

[ext_resource type="Script" uid="uid://dtfgfk5io8qir" path="res://scripts/managers/game_manager.gd" id="1_3yu1d"]
[ext_resource type="PackedScene" uid="uid://da7gnrajkgj2c" path="res://scenes/ui/menus/pause_menu.tscn" id="2_c2g8d"]
[ext_resource type="PackedScene" uid="uid://yy864im71bdh" path="res://scenes/ui/menus/settings/settings.tscn" id="3_fagfu"]
[ext_resource type="PackedScene" uid="uid://dx50qivss6fu8" path="res://scenes/managers/music_manager.tscn" id="4_psj4q"]
[ext_resource type="Script" uid="uid://c1dg1yycdn35" path="res://scripts/managers/load_manager.gd" id="5_ssqxr"]

[node name="GameManager" type="Node"]
script = ExtResource("1_3yu1d")

[node name="UI_Layer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="UI_Layer" instance=ExtResource("2_c2g8d")]
mouse_filter = 2

[node name="Settings" parent="UI_Layer" instance=ExtResource("3_fagfu")]
offset_right = 350.0
offset_bottom = 1080.0
mouse_filter = 2

[node name="MusicManager" parent="UI_Layer" instance=ExtResource("4_psj4q")]

[node name="LoadManager" type="Node" parent="UI_Layer"]
script = ExtResource("5_ssqxr")
